fix: 100vh on mobile webkit hack

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -3,7 +3,7 @@
 
 html {
     width: 100%;
-    height: 100%;
+    height: -webkit-fill-available;
     font-size: 62.5%;
     font-feature-settings: "palt";
     line-height: 1.4;
@@ -12,7 +12,8 @@ html {
 
 body {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    min-height: -webkit-fill-available; // mobile viewport bug fix
     font-family: variables.$fontFamilySansSerif;
     font-size: 1.4rem;
 }
@@ -27,4 +28,4 @@ body {
         height: 100%;
     }
 }
-// /* stylelint-enable */
+/* stylelint-enable */
